SOS fixed
Le puse un margen al boton para que no estuviera al final de la pantalla. Eso arreglo el problema del scrollbar tambien.

--- a/Prototipo Interfaz/stylesheet.css
+++ b/Prototipo Interfaz/stylesheet.css
@@ -264,7 +264,12 @@ body{
     grid-column: span 2;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    gap: 40px;
+    row-gap: 80px;
+    column-gap: 40px;
     align-items: center;
     justify-items: center;
+}
+
+.button-sos{
+    margin-bottom: 10vh;
 }
